Parcial2/parcial2/Punto2/functionParser.py
# Generated from function.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class functionParser ( Parser ):

    grammarFileName = "function.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'map'", "'('", "','", "')'", "'filter'", 
                     "'len'", "'['", "']'", "'.'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'*'", "'/'", "'+'", "'-'", "'%'", "'**'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "INT", "ID", "FLOAT", "STRING", "MUL", "DIV", "ADD", 
                      "SUB", "MOD", "POW", "NEWLINE", "WS" ]

    RULE_prog = 0
    RULE_stat = 1
    RULE_mapFunction = 2
    RULE_filterFunction = 3
    RULE_expression = 4
    RULE_opcion = 5
    RULE_arith_expression2 = 6
    RULE_term2 = 7
    RULE_factor2 = 8
    RULE_atom2 = 9
    RULE_len_expression2 = 10
    RULE_index_expression = 11
    RULE_capitalize_expression = 12
    RULE_arith_expression_comp = 13
    RULE_len_expression = 14
    RULE_id_expression = 15
    RULE_arith_expression = 16
    RULE_term = 17
    RULE_factor = 18
    RULE_atom = 19
    RULE_comp_operator = 20
    RULE_iterable = 21
    RULE_list = 22
    RULE_tuple = 23
    RULE_elements = 24
    RULE_expr = 25

    ruleNames =  [ "prog", "stat", "mapFunction", "filterFunction", "expression", 
                   "opcion", "arith_expression2", "term2", "factor2", "atom2", 
                   "len_expression2", "index_expression", "capitalize_expression", 
                   "arith_expression_comp", "len_expression", "id_expression", 
                   "arith_expression", "term", "factor", "atom", "comp_operator", 
                   "iterable", "list", "tuple", "elements", "expr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    INT=16
    ID=17
    FLOAT=18
    STRING=19
    MUL=20
    DIV=21
    ADD=22
    SUB=23
    MOD=24
    POW=25
    NEWLINE=26
    WS=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(functionParser.StatContext)
            else:
                return self.getTypedRuleContext(functionParser.StatContext,i)


        def getRuleIndex(self):
            return functionParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = functionParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 52
                self.stat()
                self.state = 55 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1 or _la==5):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mapFunction(self):
            return self.getTypedRuleContext(functionParser.MapFunctionContext,0)


        def NEWLINE(self):
            return self.getToken(functionParser.NEWLINE, 0)

        def filterFunction(self):
            return self.getTypedRuleContext(functionParser.FilterFunctionContext,0)


        def getRuleIndex(self):
            return functionParser.RULE_stat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStat" ):
                listener.enterStat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStat" ):
                listener.exitStat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = functionParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        try:
            self.state = 63
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.mapFunction()
                self.state = 58
                self.match(functionParser.NEWLINE)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.filterFunction()
                self.state = 61
                self.match(functionParser.NEWLINE)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MapFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def opcion(self):
            return self.getTypedRuleContext(functionParser.OpcionContext,0)


        def iterable(self):
            return self.getTypedRuleContext(functionParser.IterableContext,0)


        def getRuleIndex(self):
            return functionParser.RULE_mapFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapFunction" ):
                listener.enterMapFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapFunction" ):
                listener.exitMapFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapFunction" ):
                return visitor.visitMapFunction(self)
            else:
                return visitor.visitChildren(self)




    def mapFunction(self):

        localctx = functionParser.MapFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mapFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(functionParser.T__0)
            self.state = 66
            self.match(functionParser.T__1)
            self.state = 67
            self.opcion()
            self.state = 68
            self.match(functionParser.T__2)
            self.state = 69
            self.iterable()
            self.state = 70
            self.match(functionParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterFunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(functionParser.ExpressionContext,0)


        def iterable(self):
            return self.getTypedRuleContext(functionParser.IterableContext,0)


        def getRuleIndex(self):
            return functionParser.RULE_filterFunction

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterFunction" ):
                listener.enterFilterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterFunction" ):
                listener.exitFilterFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFilterFunction" ):
                return visitor.visitFilterFunction(self)
            else:
                return visitor.visitChildren(self)




    def filterFunction(self):

        localctx = functionParser.FilterFunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_filterFunction)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self.match(functionParser.T__4)
            self.state = 73
            self.match(functionParser.T__1)
            self.state = 74
            self.expression()
            self.state = 75
            self.match(functionParser.T__2)
            self.state = 76
            self.iterable()
            self.state = 77
            self.match(functionParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arith_expression_comp(self):
            return self.getTypedRuleContext(functionParser.Arith_expression_compContext,0)


        def len_expression(self):
            return self.getTypedRuleContext(functionParser.Len_expressionContext,0)


        def id_expression(self):
            return self.getTypedRuleContext(functionParser.Id_expressionContext,0)


        def getRuleIndex(self):
            return functionParser.RULE_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpression" ):
                listener.enterExpression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpression" ):
                listener.exitExpression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpression" ):
                return visitor.visitExpression(self)
            else:
                return visitor.visitChildren(self)




    def expression(self):

        localctx = functionParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expression)
        try:
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 79
                self.arith_expression_comp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 80
                self.len_expression()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 81
                self.id_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpcionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arith_expression2(self):
            return self.getTypedRuleContext(functionParser.Arith_expression2Context,0)


        def len_expression2(self):
            return self.getTypedRuleContext(functionParser.Len_expression2Context,0)


        def index_expression(self):
            return self.getTypedRuleContext(functionParser.Index_expressionContext,0)


        def capitalize_expression(self):
            return self.getTypedRuleContext(functionParser.Capitalize_expressionContext,0)


        def getRuleIndex(self):
            return functionParser.RULE_opcion

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpcion" ):
                listener.enterOpcion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpcion" ):
                listener.exitOpcion(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpcion" ):
                return visitor.visitOpcion(self)
            else:
                return visitor.visitChildren(self)




    def opcion(self):

        localctx = functionParser.OpcionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_opcion)
        try:
            self.state = 88
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 84
                self.arith_expression2()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 85
                self.len_expression2()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 86
                self.index_expression()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 87
                self.capitalize_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arith_expression2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def term2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(functionParser.Term2Context)
            else:
                return self.getTypedRuleContext(functionParser.Term2Context,i)


        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.ADD)
            else:
                return self.getToken(functionParser.ADD, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.SUB)
            else:
                return self.getToken(functionParser.SUB, i)

        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.MUL)
            else:
                return self.getToken(functionParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.DIV)
            else:
                return self.getToken(functionParser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.MOD)
            else:
                return self.getToken(functionParser.MOD, i)

        def POW(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.POW)
            else:
                return self.getToken(functionParser.POW, i)

        def getRuleIndex(self):
            return functionParser.RULE_arith_expression2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArith_expression2" ):
                listener.enterArith_expression2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArith_expression2" ):
                listener.exitArith_expression2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArith_expression2" ):
                return visitor.visitArith_expression2(self)
            else:
                return visitor.visitChildren(self)




    def arith_expression2(self):

        localctx = functionParser.Arith_expression2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arith_expression2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.term2()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 66060288) != 0):
                self.state = 91
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 66060288) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 92
                self.term2()
                self.state = 97
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Term2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor2(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(functionParser.Factor2Context)
            else:
                return self.getTypedRuleContext(functionParser.Factor2Context,i)


        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.ADD)
            else:
                return self.getToken(functionParser.ADD, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.SUB)
            else:
                return self.getToken(functionParser.SUB, i)

        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.MUL)
            else:
                return self.getToken(functionParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.DIV)
            else:
                return self.getToken(functionParser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.MOD)
            else:
                return self.getToken(functionParser.MOD, i)

        def POW(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.POW)
            else:
                return self.getToken(functionParser.POW, i)

        def getRuleIndex(self):
            return functionParser.RULE_term2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTerm2" ):
                listener.enterTerm2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTerm2" ):
                listener.exitTerm2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTerm2" ):
                return visitor.visitTerm2(self)
            else:
                return visitor.visitChildren(self)




    def term2(self):

        localctx = functionParser.Term2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_term2)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.factor2()
            self.state = 103
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 99
                    _la = self._input.LA(1)
                    if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 66060288) != 0)):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()
                    self.state = 100
                    self.factor2() 
                self.state = 105
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Factor2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def factor(self):
            return self.getTypedRuleContext(functionParser.FactorContext,0)


        def ADD(self):
            return self.getToken(functionParser.ADD, 0)

        def SUB(self):
            return self.getToken(functionParser.SUB, 0)

        def MUL(self):
            return self.getToken(functionParser.MUL, 0)

        def DIV(self):
            return self.getToken(functionParser.DIV, 0)

        def MOD(self):
            return self.getToken(functionParser.MOD, 0)

        def POW(self):
            return self.getToken(functionParser.POW, 0)

        def atom2(self):
            return self.getTypedRuleContext(functionParser.Atom2Context,0)


        def getRuleIndex(self):
            return functionParser.RULE_factor2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFactor2" ):
                listener.enterFactor2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFactor2" ):
                listener.exitFactor2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFactor2" ):
                return visitor.visitFactor2(self)
            else:
                return visitor.visitChildren(self)




    def factor2(self):

        localctx = functionParser.Factor2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_factor2)
        self._la = 0 # Token type
        try:
            self.state = 109
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [20, 21, 22, 23, 24, 25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 66060288) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 107
                self.factor()
                pass
            elif token in [2, 16, 17, 18, 19]:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.atom2()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Atom2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(functionParser.ID, 0)

        def INT(self):
            return self.getToken(functionParser.INT, 0)

        def FLOAT(self):
            return self.getToken(functionParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(functionParser.STRING, 0)

        def opcion(self):
            return self.getTypedRuleContext(functionParser.OpcionContext,0)


        def getRuleIndex(self):
            return functionParser.RULE_atom2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom2" ):
                listener.enterAtom2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom2" ):
                listener.exitAtom2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom2" ):
                return visitor.visitAtom2(self)
            else:
                return visitor.visitChildren(self)




    def atom2(self):

        localctx = functionParser.Atom2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atom2)
        try:
            self.state = 119
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [17]:
                self.enterOuterAlt(localctx, 1)
                self.state = 111
                self.match(functionParser.ID)
                pass
            elif token in [16]:
                self.enterOuterAlt(localctx, 2)
                self.state = 112
                self.match(functionParser.INT)
                pass
            elif token in [18]:
                self.enterOuterAlt(localctx, 3)
                self.state = 113
                self.match(functionParser.FLOAT)
                pass
            elif token in [19]:
                self.enterOuterAlt(localctx, 4)
                self.state = 114
                self.match(functionParser.STRING)
                pass
            elif token in [2]:
                self.enterOuterAlt(localctx, 5)
                self.state = 115
                self.match(functionParser.T__1)
                self.state = 116
                self.opcion()
                self.state = 117
                self.match(functionParser.T__3)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Len_expression2Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(functionParser.ID, 0)

        def getRuleIndex(self):
            return functionParser.RULE_len_expression2

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLen_expression2" ):
                listener.enterLen_expression2(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLen_expression2" ):
                listener.exitLen_expression2(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLen_expression2" ):
                return visitor.visitLen_expression2(self)
            else:
                return visitor.visitChildren(self)




    def len_expression2(self):

        localctx = functionParser.Len_expression2Context(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_len_expression2)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 121
            self.match(functionParser.T__5)
            self.state = 122
            self.match(functionParser.T__1)
            self.state = 123
            self.match(functionParser.ID)
            self.state = 124
            self.match(functionParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Index_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(functionParser.ID, 0)

        def INT(self):
            return self.getToken(functionParser.INT, 0)

        def getRuleIndex(self):
            return functionParser.RULE_index_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIndex_expression" ):
                listener.enterIndex_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIndex_expression" ):
                listener.exitIndex_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex_expression" ):
                return visitor.visitIndex_expression(self)
            else:
                return visitor.visitChildren(self)




    def index_expression(self):

        localctx = functionParser.Index_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_index_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(functionParser.ID)
            self.state = 127
            self.match(functionParser.T__6)
            self.state = 128
            self.match(functionParser.INT)
            self.state = 129
            self.match(functionParser.T__7)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Capitalize_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(functionParser.ID)
            else:
                return self.getToken(functionParser.ID, i)

        def getRuleIndex(self):
            return functionParser.RULE_capitalize_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCapitalize_expression" ):
                listener.enterCapitalize_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCapitalize_expression" ):
                listener.exitCapitalize_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCapitalize_expression" ):
                return visitor.visitCapitalize_expression(self)
            else:
                return visitor.visitChildren(self)




    def capitalize_expression(self):

        localctx = functionParser.Capitalize_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_capitalize_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(functionParser.ID)
            self.state = 132
            self.match(functionParser.T__8)
            self.state = 133
            self.match(functionParser.T__1)
            self.state = 134
            self.match(functionParser.ID)
            self.state = 135
            self.match(functionParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Arith_expression_compContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arith_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(functionParser.Arith_expressionContext)
            else:
                return self.getTypedRuleContext(functionParser.Arith_expressionContext,i)


        def comp_operator(self):
            return self.getTypedRuleContext(functionParser.Comp_operatorContext,0)


        def getRuleIndex(self):
            return functionParser.RULE_arith_expression_comp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArith_expression_comp" ):
                listener.enterArith_expression_comp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArith_expression_comp" ):
                listener.exitArith_expression_comp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArith_expression_comp" ):
                return visitor.visitArith_expression_comp(self)
            else:
                return visitor.visitChildren(self)




    def arith_expression_comp(self):

        localctx = functionParser.Arith_expression_compContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_arith_expression_comp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.arith_expression()
            self.state = 138
            self.comp_operator()
            self.state = 139
            self.arith_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Len_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(functionParser.ID, 0)

        def comp_operator(self):
            return self.getTypedRuleContext(functionParser.Comp_operatorContext,0)


        def INT(self):
            return self.getToken(functionParser.INT, 0)

        def getRuleIndex(self):
            return functionParser.RULE_len_expression

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLen_expression" ):
                listener.enterLen_expression(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLen_expression" ):
                listener.exitLen_expression(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLen_expression" ):
                return visitor.visitLen_expression(self)
            else:
                return visitor.visitChildren(self)




    def len_expression(self):

        localctx = functionParser.Len_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_len_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(functionParser.T__5)
            self.state = 142
            self.match(functionParser.T__1)
            self.state = 143
            self.match(functionParser.ID)
            self.state = 144
            self.match(functionParser.T__3)
            self.state = 145
            self.comp_operator()
            self.state = 146
            self.match(functionParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_expressionContext(ParserRuleContext):
        __slots__ = 'parser'
